Add circleReveal animation method :sparkles: :art: :hammer:

--- a/materialsearchview/src/main/res/values/strings.xml
+++ b/materialsearchview/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MaterialSearchView</string>
     <string name="default_search_message">Search&#8230;</string>
+    <string name="your_message_here">Your message here</string>
 </resources>
